--- a/Zahl_Raten_Spiel/style.css
+++ b/Zahl_Raten_Spiel/style.css
@@ -11,6 +11,7 @@ body {
     margin-bottom: 10px;
     padding: 5px;
     font-size: 40px;
+    transition: 0.3s;
 }
 .Buttons {
     display: flex;
